feat: personalize humanized writing
